tests/fixtures/valid/basic/float_operations.py
# Float operations
x: float = 3.0
y: float = 2.0

sum: float = x + y
diff: float = x - y
prod: float = x * y

print("Sum:", sum)
print("Difference:", diff)
print("Product:", prod)
