tests/fixtures/invalid/str_mul_float.py
# Cannot multiply Str and Float
x: float = "hello" * 1.0
